--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple ERC20 Token Wallet</title>
+    <title>Avocado Wallet</title>
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
     <div class="container" id="main">
         <header>
-           <h1>Simple ERC20 Token Wallet</h1>
+           <h1>Avocado Wallet</h1>
         </header>
         <div class="panel">
             <div class="field">Wallet Address: <div class="field-value" id="address"></div></div>
@@ -26,15 +26,15 @@
     <script src="web3/dist/web3.min.js"></script>
     <script src="index.js"></script>
     <script>
-    window.addEventListener("load", function() {
-      // Check if Web3 has been injected by the browser (Mist/MetaMask)
-      if (typeof web3 !== "undefined") {
-        // Use Mist/MetaMask's provider
-        web3 = new Web3(web3.currentProvider);
-        startApp();
-      } else {
-        displayProviderInfo();
-      }
+    window.addEventListener('load', function() {
+        // Check if Web3 has been injected by the browser (Mist/MetaMask)
+        if (typeof web3 !== 'undefined') {
+            // Use Mist/MetaMask's provider
+            web3 = new Web3(web3.currentProvider);
+            startApp();
+        } else {
+            displayProviderInfo();
+        }
     });
     </script>
 </body>
