--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <div class="container" id="main">
+    <div class="circle" >
         <header>
            <h1>Avocado Wallet</h1>
         </header>
