--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Avocado Wallet</title>
+    <link rel="icon" 
+     type="image/png" 
+     href="http://Git-Grobe.github.io/avacodo-icon.png">
     
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
