--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Avocado Wallet</title>
     <link rel="icon" 
      type="image/png" 
-     href="http://Git-Grobe.github.io/avacodo-icon.png">
+     href="https://github.com/Git-Grobe/Git-Grobe.github.io/blob/master/avocado-icon.png">
     
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
