--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Avocado Wallet</title>
-    <link rel="icon" 
+    <link rel="shortcut icon" 
      type="image/png" 
-     href="https://github.com/Git-Grobe/Git-Grobe.github.io/blob/master/avocado-icon.png">
+     href="https://Git-Grobe.github.io/avocado-icon.png">
     
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
